manifests/install/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    g8s-injection: enabled
  name: g8s
