manifests/install/webhook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g8s-webhook
  namespace: g8s
  labels:
    app: g8s-webhook
spec:
  selector:
    matchLabels:
      app: g8s-webhook
  template:
    metadata:
      labels:
        app: g8s-webhook
    spec:
      serviceAccountName: g8s
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Exists"
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/controlplane"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/etcd"
          operator: "Exists"
          effect: "NoExecute"
      containers:
        - name: webhook
          image: jrodonnell/g8s-runtime:v0.1.0-alpha
          args: ["--role", "webhook"]
          ports:
          - name: https
            containerPort: 8443
            protocol: TCP
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
            seccompProfile: 
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tls-bundle
              mountPath: "/key.pem"
              subPath: key.pem
            - name: tls-bundle
              mountPath: "cert.pem"
              subPath: cert.pem
      volumes:
        - name: tls-bundle
          secret:
            secretName: selfsignedtlsbundle-g8s-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: g8s-webhook
  namespace: g8s
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: g8s-webhook
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: g8s-webhook
  labels:
    app: g8s-webhook
webhooks:
  - name: g8s-webhook.g8s.svc
    clientConfig:
      caBundle: REPLACE_THIS
      service:
        name: g8s-webhook
        namespace: g8s
        path: "/mutate"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        g8s-injection: enabled
    sideEffects: None
    admissionReviewVersions: ["v1"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: g8s-webhook
  labels:
    app: g8s-webhook
webhooks:
  - name: g8s-webhook.g8s.svc
    clientConfig:
      caBundle: REPLACE_THIS
      service:
        name: g8s-webhook
        namespace: g8s
        path: "/validate"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["api.g8s.io"]
        apiVersions: ["v1alpha1"]
        resources: ["allowlists"]
    namespaceSelector:
      matchLabels:
        g8s-master: "true"
    sideEffects: None
    admissionReviewVersions: ["v1"]
